# company_chat

./: .env-copy  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: company.yml  main.yml  master.yml  public.yml
app/: connection_manager.py  main.py  models.py  schemas.py
app/AI/: sayory.py
app/functions/: banned_words.csv  func_socket.py  moderator.py
app/models/: models.py
app/routers/: auth.py  chat_socket.py  func_socket.py  socket.py  test.py
app/schemas/: schemas.py
app/settings/: config.py  connection_manager.py  database.py  oauth2.py
