[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "openai>=1.54.4",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
    "pydantic-core>=2.27.0",
    "python-jose>=3.3.0",
    "pytz>=2024.2",
    "ruff>=0.7.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
    "uvloop>=0.21.0",
    "websockets>=14.1",
    "bcrypt>=4.2.0",
]
